# microcalibrate

./: .gitignore  CHANGELOG.md  Makefile  changelog.yaml  changelog_entry.yaml  pyproject.toml
.github/: DEPLOYMENT_SETUP.md
.github/workflows/: dashboard-deploy-pages.yml  main.yml  pr.yaml  versioning.yaml
calibration-dashboard/: package-lock.json  package.json
calibration-dashboard/src/app/: page.tsx
calibration-dashboard/src/components/: LossChart.tsx  MetricsOverview.tsx
docs/: calibration.ipynb  long_example.ipynb
microcalibration-dashboard/: next.config.ts  package-lock.json
microcalibration-dashboard/src/app/: page.tsx
microcalibration-dashboard/src/components/: DataTable.tsx  FileUpload.tsx  LossChart.tsx
src/microcalibrate/: __init__.py  calibration.py  calibration_long.py  config.py  data.py  reweight.py
src/microcalibrate/utils/: log_performance.py  metrics.py
src/policyengine_calibrate/: __init__.py
tests/: README.md  test_basic.py  test_calibration.py
