[project]
name = "microcalibrate"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Nikhil Woodruff", email = "nikhil.woodruff@outlook.com" }
]
requires-python = ">=3.11"
dependencies = [
    "torch>=2.7.0",
]

[project.scripts]
policyengine-calibrate = "policyengine_calibrate:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
